--- a/bootloader/bootloader_s340/armgcc/Makefile
+++ b/bootloader/bootloader_s340/armgcc/Makefile
@@ -10,6 +10,9 @@ endif
 ifeq ($(BOARD),pca10056)
   BOARD_UPPER := PCA10056
 endif
+ifeq ($(BOARD),xiaoble)
+  BOARD_UPPER := XIAOBLE
+endif
 
 SDK_ROOT := $(NRF5_SDK_ROOT)
 PROJ_DIR := $(abspath ../../)
@@ -240,7 +243,7 @@ help:
 TEMPLATE_PATH := $(SDK_ROOT)/components/toolchain/gcc
 
 
-include $(TEMPLATE_PATH)/Makefile.common
+include ../../../Makefile.common
 
 $(foreach target, $(TARGETS), $(call define_target, $(target)))
 
