Fixed pin layout, reed sensor definition

--- a/bootloader/bootloader_s340/armgcc/Makefile
+++ b/bootloader/bootloader_s340/armgcc/Makefile
@@ -2,7 +2,7 @@ PROJECT_NAME     := satsbike_bootloader
 TARGETS          := satsbike_bootloader
 OUTPUT_DIRECTORY := _build_$(BOARD)
 
-BOARD ?= promicro
+BOARD ?= pca10056
 
 ifeq ($(BOARD),promicro)
   BOARD_UPPER := PROMICRO
