trying a github acton thingy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,20 @@ jobs:
       - name: Derive version from Git
         id: version
         run: |
-          TAG=$(git describe --tags --abbrev=0)
-          SHA=$(git rev-parse --short HEAD)
-          VERSION="${TAG#v}-${SHA}"
+          # Determine if this is a tag-based or manual build
+          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/tags/"* ]]; then
+            # This is a tag-based build
+            TAG=$(git describe --tags --abbrev=0)
+            SHA=$(git rev-parse --short HEAD)
+            VERSION="${TAG#v}-${SHA}"
+          else
+            # This is a manual build or PR
+            TAG=$(git describe --tags --abbrev=0)
+            SHA=$(git rev-parse --short HEAD)
+            VERSION="${TAG#v}-SNAPSHOT-${SHA}"
+          fi
+          
+          echo "Derived version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Set up Python 3.9
