--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,11 @@ jobs:
         run: |
           SHA=$(git rev-parse --short HEAD)
       
-          # Get latest reachable tag or fallback
-          TAG=$(git describe --tags --abbrev=0 --always 2>/dev/null || echo "0.0.0")
+          # Get the latest tag by sorting all tags (not just reachable ones)
+          TAG=$(git tag --sort=-v:refname | head -n 1)
+          if [[ -z "$TAG" ]]; then
+            TAG="0.0.0"
+          fi
       
           if [[ "$GITHUB_EVENT_NAME" == "push" && "$GITHUB_REF" == refs/tags/* ]]; then
             VERSION="$TAG"
@@ -40,6 +43,7 @@ jobs:
       
           echo "Derived version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+      
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
