--- a/pca10056/s340/armgcc/Makefile
+++ b/pca10056/s340/armgcc/Makefile
@@ -122,6 +122,10 @@ SRC_FILES += \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_clock.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_timer.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_saadc.c \
+  $(PROJ_DIR)/src/ble/ble_bridge.c \
+  $(PROJ_DIR)/src/data_manager.c \
+  $(PROJ_DIR)/src/cycling_data_model.c \
+  $(PROJ_DIR)/src/ant/ant_data_source.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
