--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "nrf_dfu_ble_svci_bond_sharing.h": "c",
         "nrf_svci.h": "c",
         "ble_battery_service.h": "c",
-        "arduino_nano_33_ant.h": "c"
+        "arduino_nano_33_ant.h": "c",
+        "cycling_data_model.h": "c"
     }
 }
